# pydantic-bq

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: _test.yml  ci.yml  release.yml
pydantic_bq/: __init__.py  client.py  schema.py  settings.py  types.py
tests/: __init__.py  conftest.py  test_client.py  test_e2e.py  test_schema.py  test_settings.py  test_types.py
