[project]
name = "pydantic-bq"
version = "0.1.0"
description = "Pydantic-based BigQuery client for type-safe schema definition and data operations"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "TutorCruncher"}
]
keywords = ["bigquery", "pydantic", "google-cloud", "data"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
]

dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "google-cloud-bigquery>=3.0.0",
    "google-auth>=2.0.0",
    "pandas>=2.3.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pydantic_bq"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["I"]
ignore = ['E402']

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.coverage.run]
omit = [
    "tests/*",
]

[tool.coverage.report]
    precision = 2
    exclude_lines = [
        'pragma: no cover',
        'def __repr__',
        'def __str__',
        'raise NotImplementedError',
        'raise NotImplemented',
        'print',
        'if TYPE_CHECKING'
    ]